[tool.poetry]
name = "slack_message_cleaner"
version = "0.1.0"
description = ""
authors = ["yokobot <takuou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PySimpleGUI = "^4.56.0"
slack-sdk = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
